package com.jocatelo;

import java.util.Scanner;

import com.jocatelo.character.Playable;
import com.jocatelo.character.User;

public interface Drawable {
    public void drawCard(User user);
}