package com.jocatelo.character;

import com.jocatelo.rule.PlayerCommand;

public interface Commandable {
    
}